Updating X2K API documentation notebook

--- a/src/main/webapp/notebooks/x2k_api_notebook.ipynb
+++ b/src/main/webapp/notebooks/x2k_api_notebook.ipynb
@@ -4,19 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# X2K API Tutorial\n",
+    "# X2K API Tutorial Notebook\n",
     "*Denis Torre* | April 9<sup>th</sup>, 2018\n",
     "\n",
-    "This Jupyter Notebook contains an interactive tutorial for **running the X2K API** using Python and for **interpreting its results**.\n",
-    "\n"
+    "This Jupyter Notebook contains an interactive tutorial for **running the Expression2Kinases (X2K) API** using Python 3.\n",
+    "\n",
+    "### Table of Contents\n",
+    "The notebook contains the following sections:\n",
+    "1. **<a href=\"#1\">API Documentation</a>** - shows how to programmatically analyze your gene list in Python.\n",
+    "2. **<a href=\"#2\">Using the X2K API</a>** - overview of the input parameters and output of the API.\n",
+    "3. **<a href=\"#3\">Interpreting the results</a>** - gives an overview of the structure and meaning of the analysis results.\n",
+    "    * **<a href=\"#x2k\">Expression2Kinases</a>** (X2K)\n",
+    "    * **<a href=\"#chea\">Transcription Factor Enrichment Analysis</a>** (ChEA)\n",
+    "    * **<a href=\"#g2n\">Protein-Protein Interaction Expansion</a>** (G2N)\n",
+    "    * **<a href=\"#kea\">Kinase Enrichment Analysis</a>** (KEA)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Sending a gene list to the X2K API\n",
-    "The function below can be used to send a Python gene list to the X2K API."
+    "## 1. <span id=\"1\">Using the X2K API</span>\n",
+    "The X2K API allows for programmatic analysis of an input gene list.\n",
+    "\n",
+    "The `run_X2K()` function displayed below can be used to analyze a gene list and load the results in a Python dictionary by performing a **POST request**.\n",
+    "\n",
+    "The function requires only one input, `input_genes`, which is **a list of gene symbols **. Additional optional parameters can be specified and are described more in detailed below."
    ]
   },
   {
@@ -93,14 +106,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Analyzing the Results\n",
+    "## 2. <span id=\"2\">X2K API Documentation</span>\n",
+    "\n",
+    "### 2.1 API Inputs\n",
+    "A **full list of the input parameters** for the `run_X2K()` function is available below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table id=\"parameter-table\">\n",
+    "    <tr>\n",
+    "        <th style='text-align=left;'>Parameter</th>\n",
+    "        <th style='text-align=left;'>Step</th>\n",
+    "        <th style='text-align=left;'>Description</th>\n",
+    "        <th style='text-align=left;'>Notes</th>\n",
+    "    </tr>\n",
+    "\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>**input_genes** (required)</td>\n",
+    "        <td style='text-align=left;'>X2K</td>\n",
+    "        <td style='text-align=left;'>Contains the input gene set for the X2K analysis.</td>\n",
+    "        <td style='text-align=left;'>A list of strings representing the input gene symbols.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*organism* (optional)</td>\n",
+    "        <td style='text-align=left;'>ChEA</td>\n",
+    "        <td style='text-align=left;'>The organism from which TF-target interaction data should be integrated.</td>\n",
+    "        <td style='text-align=left;'>One of `('human', 'mouse', 'both')`. Default `'both'`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*included_database* (optional)</td>\n",
+    "        <td style='text-align=left;'>ChEA</td>\n",
+    "        <td style='text-align=left;'>The database from which TF-target interaction data should be integrated,</td>\n",
+    "        <td style='text-align=left;'>One of `('ChEA 2015', 'ENCODE 2015', 'ChEA & ENCODE Consensus', 'Transfac & Jaspar')` Default `'ENCODE 2015'`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*sort_tfs_by* (optional) \n",
+    "        <td style='text-align=left;'>ChEA</td>\n",
+    "        <td style='text-align=left;'>The method used to sort the top Transcription Factors identified by ChEA.</td>\n",
+    "        <td style='text-align=left;'>One of `('p-value', 'rank', 'combined score')`. Default `'p-value'`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*path_length* (optional)</td>\n",
+    "        <td style='text-align=left;'>G2N</td>\n",
+    "        <td style='text-align=left;'>The maximum Protein-Protein Interaction path length for the network expansion.</td>\n",
+    "        <td style='text-align=left;'>Integer, default `2`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*minimum_network_size* (optional)\n",
+    "        <td style='text-align=left;'>G2N</td>\n",
+    "        <td style='text-align=left;'>The minimum size of the Protein-Protein interaction network generated using Genes2Networks.</td>\n",
+    "        <td style='text-align=left;'>Integer, default `50`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*min_number_of_articles_supporting_interaction* (optional) \n",
+    "        <td style='text-align=left;'>G2N</td>\n",
+    "        <td style='text-align=left;'>The minimum number of published articles supporting a Protein-Protein Interaction for the expanded subnetwork.</td>\n",
+    "        <td style='text-align=left;'>Integer, default `2`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*max_number_of_interactions_per_protein* (optional) \n",
+    "        <td style='text-align=left;'>G2N</td>\n",
+    "        <td style='text-align=left;'>The maximum number of physical interactions allowed for the proteins in the expanded subnetwork.</td>\n",
+    "        <td style='text-align=left;'>Integer, default `200`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*max_number_of_interactions_per_article* (optional) \n",
+    "        <td style='text-align=left;'>G2N</td>\n",
+    "        <td style='text-align=left;'>The maximum number of physical interactions reported in each published article</td>\n",
+    "        <td style='text-align=left;'>Integer, default `100`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*ppi_networks* (optional) \n",
+    "        <td style='text-align=left;'>G2N</td>\n",
+    "        <td style='text-align=left;'>The Protein-Protein Interaction databases to integrate for generation of the expanded subnetwork.</td>\n",
+    "        <td style='text-align=left;'>Either `'all'`, or a list containing one or more of `('biocarta', 'biogrid', 'dip', 'innatedb', 'intact', 'kegg', 'mint', 'ppid', 'snavi')`. Default `'all'`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*number_of_results* (optional) \n",
+    "        <td style='text-align=left;'>G2N</td>\n",
+    "        <td style='text-align=left;'>The maximum network size of the expanded network generated using Genes2Networks.</td>\n",
+    "        <td style='text-align=left;'>Integer, default `50`.</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style='text-align=left;'>*sort_kinases_by* (optional) \n",
+    "        <td style='text-align=left;'>KEA</td>\n",
+    "        <td style='text-align=left;'>The method used to sort the top Transcription Factors identified by KEA.</td>\n",
+    "        <td style='text-align=left;'>One of `('p-value', 'rank', 'combined score')`. Default `'p-value'`.</td>\n",
+    "    </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 API Output\n",
+    "The `run_X2K()` function returns results as `dict` containing **four keys**, whose contents are described below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table id=\"parameter-table\">\n",
+    "    <tr>\n",
+    "        <th style='text-align: left;'>Key</th>\n",
+    "        <th style='text-align: left;'>Notes</th>\n",
+    "        <th style='text-align: left;'>Contents</th>\n",
+    "    </tr>\n",
+    "\n",
+    "    <tr>\n",
+    "        <td style='text-align: left;'>**ChEA**</td>\n",
+    "        <td style='text-align: left;'>Contains the results of the **Transcription Factor Enrichment Analysis**, generated using ChEA.</td>\n",
+    "        <td style='text-align: left;'>A `dict` containing two keys:\n",
+    "            <ul>\n",
+    "                <li><b>transcriptionFactors</b>: A list of the top transcription factors identified by ChEA, including computed statistics (p-values, Z-scores, combined scores) and the targets.</li>\n",
+    "                <li><b>sort transcription factors by</b>: A string specifying the column used to sort the transcription factors.</li>\n",
+    "            </ul>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    " \n",
+    "    <tr>\n",
+    "        <td style='text-align: left;'>**G2N**</td>\n",
+    "        <td style='text-align: left;'>Contains the results of the **Protein-Protein Interaction Expansion**, generated using Genes2Networks (G2N).</td>\n",
+    "        <td style='text-align: left;'>A `dict` containing two keys:\n",
+    "            <ul>\n",
+    "                <li><b>network</b>: A `dict` containing two keys, `nodes` and `interactions`, which define expanded subnetwork generated by G2N.</li>\n",
+    "                <li><b>input_list</b>: A list of gene symbols used as an input for the network expansion.</li>\n",
+    "            </ul>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    " \n",
+    "    <tr>\n",
+    "        <td style='text-align: left;'>**KEA**</td>\n",
+    "        <td style='text-align: left;'>Contains the results of the **Kinase Enrichment Analysis**, generated using KEA.</td>\n",
+    "        <td style='text-align: left;'>A `dict` containing two keys:\n",
+    "            <ul>\n",
+    "                <li><b>kinases</b>: A list of the top kinases identified by KEA, including computed statistics (p-values, Z-scores, combined scores) and the substrates.</li>\n",
+    "                <li><b>sort kinases by</b>: A string specifying the column used to sort the kinases.</li>\n",
+    "            </ul>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    " \n",
+    "    <tr>\n",
+    "        <td style='text-align: left;'>**X2K**</td>\n",
+    "        <td style='text-align: left;'>Contains the **Expression2Kinases network**, generated by integrating the results of ChEA, G2N and KEA.</td>\n",
+    "        <td style='text-align: left;'>...</td>\n",
+    "    </tr>\n",
+    " \n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. <span id=\"3\">Interpreting the Results</span>\n",
     "The results are stored in a dictionary containing four keys:\n",
     "* `X2K`\n",
     "* `ChEA`\n",
     "* `G2N`\n",
     "* `KEA`\n",
     "\n",
-    "### 2.1 Expression2Kinases (X2K) results\n",
+    "### 3.1 <span id=\"x2k\">Expression2Kinases (X2K) results</span>\n",
     "The results for the X2K analysis can be accessed in <code>x2k_results['X2K']</code>.\n",
     "\n",
     "The results are stored in a dictionary containing three keys:\n",
@@ -538,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 ChEA Results\n",
+    "### 3.2 <span id=\"chea\">ChEA Results</span>\n",
     "The results for the ChEA analysis can be accessed in <code>x2k_results['ChEA']</code>.\n",
     "\n",
     "The results are stored in a dictionary containing three keys:\n",
@@ -682,7 +853,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 G2N Results\n",
+    "### 3.3 <span id=\"g2n\">G2N Results</span>\n",
     "The results for the G2N analysis can be accessed in <code>x2k_results['G2N']</code>.\n",
     "\n",
     "The results are stored in a dictionary containing three keys:\n",
@@ -901,7 +1072,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 KEA Results\n",
+    "### 3.4 <span id=\"kea\">KEA Results</span>\n",
     "The results for the KEA analysis can be accessed in <code>x2k_results['KEA']</code>.\n",
     "\n",
     "The results are stored in a dictionary containing three keys:\n",
