Date fix for notebook

--- a/src/main/webapp/notebooks/x2k_api_notebook.ipynb
+++ b/src/main/webapp/notebooks/x2k_api_notebook.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# X2K API Tutorial Notebook\n",
-    "April 9<sup>th</sup>, 2018\n",
+    "February 21<sup>st</sup>, 2019\n",
     "\n",
     "This Jupyter Notebook contains an interactive tutorial for **running the Expression2Kinases (X2K) API** using Python 3.\n",
     "\n",
