Fix for KEA and gradle

--- a/src/main/webapp/notebooks/x2k_api_notebook.ipynb
+++ b/src/main/webapp/notebooks/x2k_api_notebook.ipynb
@@ -58,7 +58,7 @@
     "                       'max_number_of_interactions_per_protein': 200, 'max_number_of_interactions_per_article': 100,\n",
     "                       'enable_Biocarta': True, 'enable_BioGRID': True, 'enable_DIP': True, 'enable_InnateDB': True, 'enable_IntAct': True, 'enable_KEGG': True,\n",
     "                       'enable_MINT': True, 'enable_ppid': True, 'enable_SNAVI': True, 'number_of_results': 50,\n",
-    "                       'sort transcription factors by': 'combined score', 'sort kinases by': 'combined score'}\n",
+    "                       'sort transcription factors by': 'combined score', 'sort kinases by': 'combined score', 'kinase interactions to include': 'ARCHS4'}\n",
     "\n",
     "    # Update options\n",
     "    for key, value in options.items():\n",
@@ -205,7 +205,7 @@
     "        <td style='text-align=left;'>*TF-target gene background database used for enrichment* (optional)</td>\n",
     "        <td style='text-align=left;'>ChEA</td>\n",
     "        <td style='text-align=left;'>The database from which TF-target interaction data should be integrated,</td>\n",
-    "        <td style='text-align=left;'>One of `('ChEA 2015', 'ENCODE 2015', 'ChEA & ENCODE Consensus', 'TRANSFAC & JASPAR', 'ChEA 2016', 'ARCHS4', 'CREEDS', 'Enrichr Co-occurrence')` Default `'ChEA & ENCODE Consensus'`.</td>\n",
+    "        <td style='text-align=left;'>One of `('ChEA 2015', 'ENCODE 2015', 'ChEA & ENCODE Consensus', 'TRANSFAC & JASPAR', 'ChEA 2016', 'ARCHS4', 'CREEDS', 'Enrichr Co-occurrence')` Default `'ChEA & ENCODE Consensus')`.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style='text-align=left;'>*sort transcription factors by* (optional) \n",
@@ -352,10 +352,16 @@
     "        <td style='text-align=left;'>Integer, default `50`.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
+    "        <td style='text-align=left;'>*kinase interactions to include* \n",
+    "        <td style='text-align=left;'>KEA</td>\n",
+    "        <td style='text-align=left;'>Kinase interactions databases to include.</td>\n",
+    "        <td style='text-align=left;'>One of `('p-value', 'rank', 'combined score')`. Default `'p-value'`.</td>\n",
+    "    </tr>        \n",
+    "    <tr>\n",
     "        <td style='text-align=left;'>*sort_kinases_by* (optional) \n",
     "        <td style='text-align=left;'>KEA</td>\n",
     "        <td style='text-align=left;'>The method used to sort the top Transcription Factors identified by KEA.</td>\n",
-    "        <td style='text-align=left;'>One of `('p-value', 'rank', 'combined score')`. Default `'p-value'`.</td>\n",
+    "        <td style='text-align=left;'>One of `('kea 2018', 'ARCHS4', 'iPTMnet', 'NetworkIN', 'Phospho.ELM', 'Phosphopoint', 'PhosphoPlus', 'MINT')`. Default `'kea 2018'`.</td>\n",
     "    </tr>\n",
     "</table>\n"
    ]
