--- a/src/main/webapp/notebooks/x2k_api_notebook.ipynb
+++ b/src/main/webapp/notebooks/x2k_api_notebook.ipynb
@@ -780,41 +780,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[RB1, ELK1, MYC, MED1, CSNK2A1, PRKCD, PRKCA, ...</td>\n",
-       "      <td>MAPK1</td>\n",
-       "      <td>8.532142e-17</td>\n",
+       "      <td>[SMARCA4, NEDD4, ABL1, CTNNB1]</td>\n",
+       "      <td>MAP4K4</td>\n",
+       "      <td>0.000393</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[ELK1, ELK4, MYC, MED1, PRKCD, PRKCA, AR, TP53...</td>\n",
-       "      <td>MAPK3</td>\n",
-       "      <td>6.156755e-13</td>\n",
+       "      <td>[NCOR2, HUWE1, HCFC1]</td>\n",
+       "      <td>TRRAP</td>\n",
+       "      <td>0.000847</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[RB1, ELK1, MYC, CSNK2A1, AR, BIN1, PPARGC1A, ...</td>\n",
-       "      <td>GSK3B</td>\n",
-       "      <td>8.172809e-11</td>\n",
+       "      <td>[HSPA4, DDB1, NEDD4]</td>\n",
+       "      <td>PRKCI</td>\n",
+       "      <td>0.004609</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[RB1, GTF2B, TAF9, RELA, JUN, TBP, FOS, GTF2F1...</td>\n",
-       "      <td>TAF1</td>\n",
-       "      <td>4.703558e-09</td>\n",
+       "      <td>[TRRAP, ELK1, CARM1]</td>\n",
+       "      <td>MAP3K4</td>\n",
+       "      <td>0.004609</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[RB1, ELK1, MYC, MED1, CSNK2A1, BIN1, PPARGC1A...</td>\n",
-       "      <td>CDK2</td>\n",
-       "      <td>8.648123e-09</td>\n",
+       "      <td>[PML, ETV6, STAT6]</td>\n",
+       "      <td>RIPK1</td>\n",
+       "      <td>0.004609</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -822,19 +822,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   combinedScore                                 enrichedSubstrates   name  \\\n",
-       "0            0.0  [RB1, ELK1, MYC, MED1, CSNK2A1, PRKCD, PRKCA, ...  MAPK1   \n",
-       "1            0.0  [ELK1, ELK4, MYC, MED1, PRKCD, PRKCA, AR, TP53...  MAPK3   \n",
-       "2            0.0  [RB1, ELK1, MYC, CSNK2A1, AR, BIN1, PPARGC1A, ...  GSK3B   \n",
-       "3            0.0  [RB1, GTF2B, TAF9, RELA, JUN, TBP, FOS, GTF2F1...   TAF1   \n",
-       "4            0.0  [RB1, ELK1, MYC, MED1, CSNK2A1, BIN1, PPARGC1A...   CDK2   \n",
-       "\n",
-       "         pvalue  zscore  \n",
-       "0  8.532142e-17     0.0  \n",
-       "1  6.156755e-13     0.0  \n",
-       "2  8.172809e-11     0.0  \n",
-       "3  4.703558e-09     0.0  \n",
-       "4  8.648123e-09     0.0  "
+       "   combinedScore              enrichedSubstrates    name    pvalue  zscore\n",
+       "0            0.0  [SMARCA4, NEDD4, ABL1, CTNNB1]  MAP4K4  0.000393     0.0\n",
+       "1            0.0           [NCOR2, HUWE1, HCFC1]   TRRAP  0.000847     0.0\n",
+       "2            0.0            [HSPA4, DDB1, NEDD4]   PRKCI  0.004609     0.0\n",
+       "3            0.0            [TRRAP, ELK1, CARM1]  MAP3K4  0.004609     0.0\n",
+       "4            0.0              [PML, ETV6, STAT6]   RIPK1  0.004609     0.0"
       ]
      },
      "execution_count": 6,
@@ -982,28 +975,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>368</td>\n",
-       "      <td>33</td>\n",
+       "      <td>10</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>368</td>\n",
-       "      <td>80</td>\n",
+       "      <td>10</td>\n",
+       "      <td>164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>368</td>\n",
-       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>368</td>\n",
-       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>368</td>\n",
-       "      <td>143</td>\n",
+       "      <td>36</td>\n",
+       "      <td>116</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1011,11 +1004,11 @@
       ],
       "text/plain": [
        "   source  target\n",
-       "0     368      33\n",
-       "1     368      80\n",
-       "2     368       4\n",
-       "3     368      20\n",
-       "4     368     143"
+       "0      10      22\n",
+       "1      10     164\n",
+       "2      10     264\n",
+       "3      10     171\n",
+       "4      36     116"
       ]
      },
      "execution_count": 8,
