--- a/src/main/webapp/notebooks/x2k_api_notebook.ipynb
+++ b/src/main/webapp/notebooks/x2k_api_notebook.ipynb
@@ -52,8 +52,8 @@
     "    conn = http.client.HTTPConnection(\"amp.pharm.mssm.edu\")  #\n",
     "\n",
     "    # Get default options\n",
-    "    default_options = {'text-genes': '\\n'.join(input_genes), 'included_organisms': 'both',\n",
-    "                       'TF-target gene background database used for enrichment': 'ChEA 2015', 'path_length': 2, 'min_network_size': 50,\n",
+    "    default_options = {'text-genes': '\\n'.join(input_genes), 'included_organisms': 'human',\n",
+    "                       'TF-target gene background database used for enrichment': 'ChEA & ENCODE Consensus', 'path_length': 2, 'min_network_size': 50,\n",
     "                       'min_number_of_articles_supporting_interaction': 2,\n",
     "                       'max_number_of_interactions_per_protein': 200, 'max_number_of_interactions_per_article': 100,\n",
     "                       'enable_Biocarta': True, 'enable_BioGRID': True, 'enable_DIP': True, 'enable_InnateDB': True, 'enable_IntAct': True, 'enable_KEGG': True,\n",
@@ -205,7 +205,7 @@
     "        <td style='text-align=left;'>*TF-target gene background database used for enrichment* (optional)</td>\n",
     "        <td style='text-align=left;'>ChEA</td>\n",
     "        <td style='text-align=left;'>The database from which TF-target interaction data should be integrated,</td>\n",
-    "        <td style='text-align=left;'>One of `('ChEA 2015', 'ENCODE 2015', 'ChEA & ENCODE Consensus', 'TRANSFAC & JASPAR', 'ChEA 2016', 'ARCHS4', 'CREEDS', 'Enrichr Co-occurrence')` Default `'ChEA & ENCODE Consensus')`.</td>\n",
+    "        <td style='text-align=left;'>One of `('ChEA 2015', 'ENCODE 2015', 'ChEA & ENCODE Consensus', 'Transfac and Jaspar', 'ChEA 2016', 'ARCHS4 TFs Coexp', 'CREEDS', 'Enrichr Submissions TF-Gene Coocurrence')` Default `'ChEA & ENCODE Consensus')`.</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style='text-align=left;'>*sort transcription factors by* (optional) \n",
@@ -471,51 +471,51 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[D4BWG0951E, AW209491, RDH14, SFXN5, SMO, AP4S...</td>\n",
+       "      <td>[NUDT6, ZFYVE20, YME1L1, ARSK, NOL7, TSR2, PMP...</td>\n",
        "      <td>{}</td>\n",
-       "      <td>E2F1_18555785_CHIP-SEQ_MESC_MOUSE</td>\n",
-       "      <td>6.463489e-54</td>\n",
-       "      <td>E2F1</td>\n",
+       "      <td>NR2C2_ENCODE</td>\n",
+       "      <td>0.000643</td>\n",
+       "      <td>NR2C2</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[PRKACA, SF1, PKIG, SMO, NEO1, VPS13B, C1D, CA...</td>\n",
+       "      <td>[MTMR14, MED14, POLRMT, ZKSCAN1, VPS13B, NUDT6...</td>\n",
        "      <td>{}</td>\n",
-       "      <td>CREM_20920259_CHIP-SEQ_GC1-SPG_MOUSE</td>\n",
-       "      <td>1.086405e-31</td>\n",
-       "      <td>CREM</td>\n",
+       "      <td>GABPA_ENCODE</td>\n",
+       "      <td>0.000643</td>\n",
+       "      <td>GABPA</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[AW209491, SF1, RDH14, SMO, AP4S1, SAC3D1, ZKS...</td>\n",
+       "      <td>[SF1, ENY2, ACO1, LYPLA1, MTFR1, TLCD1, ZBTB44...</td>\n",
        "      <td>{}</td>\n",
-       "      <td>ZFX_18555785_CHIP-SEQ_MESC_MOUSE</td>\n",
-       "      <td>2.027806e-31</td>\n",
-       "      <td>ZFX</td>\n",
+       "      <td>ERG_CHEA</td>\n",
+       "      <td>0.000679</td>\n",
+       "      <td>ERG</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[MTMR14, 1700023B02RIK, TSR2, 2010309E21RIK, S...</td>\n",
+       "      <td>[SF1, CREBL2, AP4S1, ZKSCAN1, VPS13B, C1D, TGD...</td>\n",
        "      <td>{}</td>\n",
-       "      <td>JARID1A_20064375_CHIP-SEQ_MESC_MOUSE</td>\n",
-       "      <td>1.385773e-29</td>\n",
-       "      <td>JARID1A</td>\n",
+       "      <td>TAF1_ENCODE</td>\n",
+       "      <td>0.002002</td>\n",
+       "      <td>TAF1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[AW209491, SAC3D1, 1810049H13RIK, GSTZ1, RFESD...</td>\n",
+       "      <td>[SF1, MTMR14, TSR2, ZKSCAN1, PGM2, VPS13B, TMB...</td>\n",
        "      <td>{}</td>\n",
-       "      <td>MYC_18358816_CHIP-CHIP_MESC_MOUSE</td>\n",
-       "      <td>3.823788e-29</td>\n",
-       "      <td>MYC</td>\n",
+       "      <td>ELF1_ENCODE</td>\n",
+       "      <td>0.003928</td>\n",
+       "      <td>ELF1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -524,18 +524,18 @@
       ],
       "text/plain": [
        "   combinedScore                                    enrichedTargets meta  \\\n",
-       "0            0.0  [D4BWG0951E, AW209491, RDH14, SFXN5, SMO, AP4S...   {}   \n",
-       "1            0.0  [PRKACA, SF1, PKIG, SMO, NEO1, VPS13B, C1D, CA...   {}   \n",
-       "2            0.0  [AW209491, SF1, RDH14, SMO, AP4S1, SAC3D1, ZKS...   {}   \n",
-       "3            0.0  [MTMR14, 1700023B02RIK, TSR2, 2010309E21RIK, S...   {}   \n",
-       "4            0.0  [AW209491, SAC3D1, 1810049H13RIK, GSTZ1, RFESD...   {}   \n",
+       "0            0.0  [NUDT6, ZFYVE20, YME1L1, ARSK, NOL7, TSR2, PMP...   {}   \n",
+       "1            0.0  [MTMR14, MED14, POLRMT, ZKSCAN1, VPS13B, NUDT6...   {}   \n",
+       "2            0.0  [SF1, ENY2, ACO1, LYPLA1, MTFR1, TLCD1, ZBTB44...   {}   \n",
+       "3            0.0  [SF1, CREBL2, AP4S1, ZKSCAN1, VPS13B, C1D, TGD...   {}   \n",
+       "4            0.0  [SF1, MTMR14, TSR2, ZKSCAN1, PGM2, VPS13B, TMB...   {}   \n",
        "\n",
-       "                                   name        pvalue simpleName  zscore  \n",
-       "0     E2F1_18555785_CHIP-SEQ_MESC_MOUSE  6.463489e-54       E2F1     0.0  \n",
-       "1  CREM_20920259_CHIP-SEQ_GC1-SPG_MOUSE  1.086405e-31       CREM     0.0  \n",
-       "2      ZFX_18555785_CHIP-SEQ_MESC_MOUSE  2.027806e-31        ZFX     0.0  \n",
-       "3  JARID1A_20064375_CHIP-SEQ_MESC_MOUSE  1.385773e-29    JARID1A     0.0  \n",
-       "4     MYC_18358816_CHIP-CHIP_MESC_MOUSE  3.823788e-29        MYC     0.0  "
+       "           name    pvalue simpleName  zscore  \n",
+       "0  NR2C2_ENCODE  0.000643      NR2C2     0.0  \n",
+       "1  GABPA_ENCODE  0.000643      GABPA     0.0  \n",
+       "2      ERG_CHEA  0.000679        ERG     0.0  \n",
+       "3   TAF1_ENCODE  0.002002       TAF1     0.0  \n",
+       "4   ELF1_ENCODE  0.003928       ELF1     0.0  "
       ]
      },
      "execution_count": 3,
@@ -599,27 +599,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>E2F1_18555785_CHIP-SEQ_MESC_MOUSE</td>\n",
+       "      <td>NR2C2_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CREM_20920259_CHIP-SEQ_GC1-SPG_MOUSE</td>\n",
+       "      <td>GABPA_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ZFX_18555785_CHIP-SEQ_MESC_MOUSE</td>\n",
+       "      <td>ERG_CHEA</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>JARID1A_20064375_CHIP-SEQ_MESC_MOUSE</td>\n",
+       "      <td>TAF1_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>MYC_18358816_CHIP-CHIP_MESC_MOUSE</td>\n",
+       "      <td>ELF1_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -627,12 +627,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                   name type\n",
-       "0     E2F1_18555785_CHIP-SEQ_MESC_MOUSE   tf\n",
-       "1  CREM_20920259_CHIP-SEQ_GC1-SPG_MOUSE   tf\n",
-       "2      ZFX_18555785_CHIP-SEQ_MESC_MOUSE   tf\n",
-       "3  JARID1A_20064375_CHIP-SEQ_MESC_MOUSE   tf\n",
-       "4     MYC_18358816_CHIP-CHIP_MESC_MOUSE   tf"
+       "           name type\n",
+       "0  NR2C2_ENCODE   tf\n",
+       "1  GABPA_ENCODE   tf\n",
+       "2      ERG_CHEA   tf\n",
+       "3   TAF1_ENCODE   tf\n",
+       "4   ELF1_ENCODE   tf"
       ]
      },
      "execution_count": 4,
@@ -687,27 +687,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10</td>\n",
-       "      <td>10</td>\n",
+       "      <td>135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10</td>\n",
-       "      <td>255</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10</td>\n",
-       "      <td>90</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10</td>\n",
-       "      <td>218</td>\n",
+       "      <td>127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10</td>\n",
-       "      <td>56</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -715,11 +715,11 @@
       ],
       "text/plain": [
        "   source  target\n",
-       "0      10      10\n",
-       "1      10     255\n",
-       "2      10      90\n",
-       "3      10     218\n",
-       "4      10      56"
+       "0      10     135\n",
+       "1      10      10\n",
+       "2      10      29\n",
+       "3      10     127\n",
+       "4      10       2"
       ]
      },
      "execution_count": 5,
@@ -780,41 +780,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[SMARCA4, NEDD4, ABL1, CTNNB1]</td>\n",
-       "      <td>MAP4K4</td>\n",
-       "      <td>0.000393</td>\n",
+       "      <td>[HSPA4, DDB1, NEDD4]</td>\n",
+       "      <td>PRKCI</td>\n",
+       "      <td>0.000725</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[NCOR2, HUWE1, HCFC1]</td>\n",
-       "      <td>TRRAP</td>\n",
-       "      <td>0.000847</td>\n",
+       "      <td>[DDB1, NEDD4, SERPINH1]</td>\n",
+       "      <td>PTK7</td>\n",
+       "      <td>0.000725</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[HSPA4, DDB1, NEDD4]</td>\n",
-       "      <td>PRKCI</td>\n",
-       "      <td>0.004609</td>\n",
+       "      <td>[NCOR2, HCFC1]</td>\n",
+       "      <td>TRRAP</td>\n",
+       "      <td>0.003878</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[TRRAP, ELK1, CARM1]</td>\n",
-       "      <td>MAP3K4</td>\n",
-       "      <td>0.004609</td>\n",
+       "      <td>[NR1I2, HNF4A]</td>\n",
+       "      <td>ERBB3</td>\n",
+       "      <td>0.011544</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[PML, ETV6, STAT6]</td>\n",
-       "      <td>RIPK1</td>\n",
-       "      <td>0.004609</td>\n",
+       "      <td>[NEDD4, SERPINH1]</td>\n",
+       "      <td>EPHB4</td>\n",
+       "      <td>0.012757</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -822,12 +822,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   combinedScore              enrichedSubstrates    name    pvalue  zscore\n",
-       "0            0.0  [SMARCA4, NEDD4, ABL1, CTNNB1]  MAP4K4  0.000393     0.0\n",
-       "1            0.0           [NCOR2, HUWE1, HCFC1]   TRRAP  0.000847     0.0\n",
-       "2            0.0            [HSPA4, DDB1, NEDD4]   PRKCI  0.004609     0.0\n",
-       "3            0.0            [TRRAP, ELK1, CARM1]  MAP3K4  0.004609     0.0\n",
-       "4            0.0              [PML, ETV6, STAT6]   RIPK1  0.004609     0.0"
+       "   combinedScore       enrichedSubstrates   name    pvalue  zscore\n",
+       "0            0.0     [HSPA4, DDB1, NEDD4]  PRKCI  0.000725     0.0\n",
+       "1            0.0  [DDB1, NEDD4, SERPINH1]   PTK7  0.000725     0.0\n",
+       "2            0.0           [NCOR2, HCFC1]  TRRAP  0.003878     0.0\n",
+       "3            0.0           [NR1I2, HNF4A]  ERBB3  0.011544     0.0\n",
+       "4            0.0        [NEDD4, SERPINH1]  EPHB4  0.012757     0.0"
       ]
      },
      "execution_count": 6,
@@ -888,27 +888,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>E2F1_18555785_CHIP-SEQ_MESC_MOUSE</td>\n",
+       "      <td>NR2C2_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CREM_20920259_CHIP-SEQ_GC1-SPG_MOUSE</td>\n",
+       "      <td>GABPA_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ZFX_18555785_CHIP-SEQ_MESC_MOUSE</td>\n",
+       "      <td>ERG_CHEA</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>JARID1A_20064375_CHIP-SEQ_MESC_MOUSE</td>\n",
+       "      <td>TAF1_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>MYC_18358816_CHIP-CHIP_MESC_MOUSE</td>\n",
+       "      <td>ELF1_ENCODE</td>\n",
        "      <td>tf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -916,12 +916,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                   name type\n",
-       "0     E2F1_18555785_CHIP-SEQ_MESC_MOUSE   tf\n",
-       "1  CREM_20920259_CHIP-SEQ_GC1-SPG_MOUSE   tf\n",
-       "2      ZFX_18555785_CHIP-SEQ_MESC_MOUSE   tf\n",
-       "3  JARID1A_20064375_CHIP-SEQ_MESC_MOUSE   tf\n",
-       "4     MYC_18358816_CHIP-CHIP_MESC_MOUSE   tf"
+       "           name type\n",
+       "0  NR2C2_ENCODE   tf\n",
+       "1  GABPA_ENCODE   tf\n",
+       "2      ERG_CHEA   tf\n",
+       "3   TAF1_ENCODE   tf\n",
+       "4   ELF1_ENCODE   tf"
       ]
      },
      "execution_count": 7,
@@ -976,27 +976,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10</td>\n",
-       "      <td>22</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10</td>\n",
-       "      <td>164</td>\n",
+       "      <td>169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10</td>\n",
-       "      <td>264</td>\n",
+       "      <td>173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "      <td>171</td>\n",
+       "      <td>11</td>\n",
+       "      <td>169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>36</td>\n",
-       "      <td>116</td>\n",
+       "      <td>11</td>\n",
+       "      <td>173</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1004,11 +1004,11 @@
       ],
       "text/plain": [
        "   source  target\n",
-       "0      10      22\n",
-       "1      10     164\n",
-       "2      10     264\n",
-       "3      10     171\n",
-       "4      36     116"
+       "0      10     126\n",
+       "1      10     169\n",
+       "2      10     173\n",
+       "3      11     169\n",
+       "4      11     173"
       ]
      },
      "execution_count": 8,
