--- a/src/main/webapp/notebooks/x2k_api_notebook.ipynb
+++ b/src/main/webapp/notebooks/x2k_api_notebook.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# X2K API Tutorial Notebook\n",
-    "February 21<sup>st</sup>, 2019\n",
+    "February 25<sup>st</sup>, 2019\n",
     "\n",
     "This Jupyter Notebook contains an interactive tutorial for **running the Expression2Kinases (X2K) API** using Python 3.\n",
     "\n",
@@ -49,16 +49,26 @@
     "\n",
     "def run_X2K(input_genes, options={}):\n",
     "    # Open HTTP connection\n",
-    "    conn = http.client.HTTPConnection(\"amp.pharm.mssm.edu\")  #\n",
+    "    conn = http.client.HTTPConnection(\"amp.pharm.mssm.edu\")\n",
     "\n",
-    "    # Get default options\n",
-    "    default_options = {'text-genes': '\\n'.join(input_genes), 'included_organisms': 'human',\n",
-    "                       'TF-target gene background database used for enrichment': 'ChEA & ENCODE Consensus', 'path_length': 2, 'min_network_size': 50,\n",
-    "                       'min_number_of_articles_supporting_interaction': 2,\n",
-    "                       'max_number_of_interactions_per_protein': 200, 'max_number_of_interactions_per_article': 100,\n",
-    "                       'enable_Biocarta': True, 'enable_BioGRID': True, 'enable_DIP': True, 'enable_InnateDB': True, 'enable_IntAct': True, 'enable_KEGG': True,\n",
-    "                       'enable_MINT': True, 'enable_ppid': True, 'enable_SNAVI': True, 'number_of_results': 50,\n",
-    "                       'sort transcription factors by': 'combined score', 'sort kinases by': 'combined score', 'kinase interactions to include': 'ARCHS4'}\n",
+    "    # Set default options\n",
+    "    default_options = {'text-genes': '\\n'.join(input_genes),\n",
+    "                       'included_organisms': 'both',\n",
+    "                       'TF-target gene background database used for enrichment': 'ChEA & ENCODE Consensus',\n",
+    "                       'sort transcription factors by': 'p-value',\n",
+    "                       'min_network_size': 10,\n",
+    "                       'number of top TFs': 10,\n",
+    "                       'path_length': 2,\n",
+    "                       'min_number_of_articles_supporting_interaction': 0,\n",
+    "                       'max_number_of_interactions_per_protein': 200,\n",
+    "                       'max_number_of_interactions_per_article': 100,\n",
+    "                       'enable_BioGRID': True,\n",
+    "                       'enable_IntAct': True,\n",
+    "                       'enable_MINT': True,\n",
+    "                       'enable_ppid': True,\n",
+    "                       'enable_Stelzl': True,\n",
+    "                       'kinase interactions to include': 'kea 2018',\n",
+    "                       'sort kinases by': 'p-value'}\n",
     "\n",
     "    # Update options\n",
     "    for key, value in options.items():\n",
@@ -687,27 +697,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10</td>\n",
-       "      <td>135</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10</td>\n",
-       "      <td>10</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10</td>\n",
-       "      <td>29</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10</td>\n",
-       "      <td>127</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10</td>\n",
-       "      <td>2</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -715,11 +725,11 @@
       ],
       "text/plain": [
        "   source  target\n",
-       "0      10     135\n",
-       "1      10      10\n",
-       "2      10      29\n",
-       "3      10     127\n",
-       "4      10       2"
+       "0      10       6\n",
+       "1      10       7\n",
+       "2      10      10\n",
+       "3      10      14\n",
+       "4      10      15"
       ]
      },
      "execution_count": 5,
@@ -780,41 +790,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[HSPA4, DDB1, NEDD4]</td>\n",
-       "      <td>PRKCI</td>\n",
-       "      <td>0.000725</td>\n",
+       "      <td>[RB1, SUB1, JUN, RCOR1, YY1, SP1, HDAC4, HDAC2...</td>\n",
+       "      <td>CK2ALPHA</td>\n",
+       "      <td>2.373774e-09</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[DDB1, NEDD4, SERPINH1]</td>\n",
-       "      <td>PTK7</td>\n",
-       "      <td>0.000725</td>\n",
+       "      <td>[RB1, JUN, SMAD4, SMAD3, SP1, SREBF1, HDAC4]</td>\n",
+       "      <td>ERK2</td>\n",
+       "      <td>5.720848e-07</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[NCOR2, HCFC1]</td>\n",
-       "      <td>TRRAP</td>\n",
-       "      <td>0.003878</td>\n",
+       "      <td>[JUN, SP1, SP3, SREBF1, ZNF384, HDAC2, GABPA, ...</td>\n",
+       "      <td>CDK2</td>\n",
+       "      <td>2.061995e-06</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[NR1I2, HNF4A]</td>\n",
-       "      <td>ERBB3</td>\n",
-       "      <td>0.011544</td>\n",
+       "      <td>[RB1, MED1, JUN, EZH2, ERG, SP1, SP3, SREBF1, ...</td>\n",
+       "      <td>MAPK1</td>\n",
+       "      <td>7.049956e-06</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>[NEDD4, SERPINH1]</td>\n",
-       "      <td>EPHB4</td>\n",
-       "      <td>0.012757</td>\n",
+       "      <td>[JUN, SMAD4, SMAD3, SP1, SREBF1, HDAC4]</td>\n",
+       "      <td>ERK1</td>\n",
+       "      <td>1.296236e-05</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -822,12 +832,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   combinedScore       enrichedSubstrates   name    pvalue  zscore\n",
-       "0            0.0     [HSPA4, DDB1, NEDD4]  PRKCI  0.000725     0.0\n",
-       "1            0.0  [DDB1, NEDD4, SERPINH1]   PTK7  0.000725     0.0\n",
-       "2            0.0           [NCOR2, HCFC1]  TRRAP  0.003878     0.0\n",
-       "3            0.0           [NR1I2, HNF4A]  ERBB3  0.011544     0.0\n",
-       "4            0.0        [NEDD4, SERPINH1]  EPHB4  0.012757     0.0"
+       "   combinedScore                                 enrichedSubstrates      name  \\\n",
+       "0            0.0  [RB1, SUB1, JUN, RCOR1, YY1, SP1, HDAC4, HDAC2...  CK2ALPHA   \n",
+       "1            0.0       [RB1, JUN, SMAD4, SMAD3, SP1, SREBF1, HDAC4]      ERK2   \n",
+       "2            0.0  [JUN, SP1, SP3, SREBF1, ZNF384, HDAC2, GABPA, ...      CDK2   \n",
+       "3            0.0  [RB1, MED1, JUN, EZH2, ERG, SP1, SP3, SREBF1, ...     MAPK1   \n",
+       "4            0.0            [JUN, SMAD4, SMAD3, SP1, SREBF1, HDAC4]      ERK1   \n",
+       "\n",
+       "         pvalue  zscore  \n",
+       "0  2.373774e-09     0.0  \n",
+       "1  5.720848e-07     0.0  \n",
+       "2  2.061995e-06     0.0  \n",
+       "3  7.049956e-06     0.0  \n",
+       "4  1.296236e-05     0.0  "
       ]
      },
      "execution_count": 6,
@@ -976,27 +993,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10</td>\n",
-       "      <td>126</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10</td>\n",
-       "      <td>169</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10</td>\n",
-       "      <td>173</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>169</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>173</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1004,11 +1021,11 @@
       ],
       "text/plain": [
        "   source  target\n",
-       "0      10     126\n",
-       "1      10     169\n",
-       "2      10     173\n",
-       "3      11     169\n",
-       "4      11     173"
+       "0      10      33\n",
+       "1      10      30\n",
+       "2      10      25\n",
+       "3      10       9\n",
+       "4      10       6"
       ]
      },
      "execution_count": 8,
