--- a/src/main/webapp/notebooks/x2k_api_notebook.ipynb
+++ b/src/main/webapp/notebooks/x2k_api_notebook.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Import modules\n",
-    "import http.client\n",
+    "import requests\n",
     "import json\n",
     "\n",
     "\n",
@@ -48,12 +48,8 @@
     "### Output: a dictionary containing the results of X2K, ChEA, G2N, KEA.\n",
     "\n",
     "def run_X2K(input_genes, options={}):\n",
-    "    # Open HTTP connection\n",
-    "    conn = http.client.HTTPConnection(\"amp.pharm.mssm.edu\")\n",
-    "\n",
     "    # Set default options\n",
-    "    default_options = {'text-genes': '\\n'.join(input_genes),\n",
-    "                       'included_organisms': 'both',\n",
+    "    all_options = {'included_organisms': 'both',\n",
     "                       'TF-target gene background database used for enrichment': 'ChEA & ENCODE Consensus',\n",
     "                       'sort transcription factors by': 'p-value',\n",
     "                       'min_network_size': 10,\n",
@@ -70,34 +66,21 @@
     "                       'kinase interactions to include': 'kea 2018',\n",
     "                       'sort kinases by': 'p-value'}\n",
     "\n",
-    "    # Update options\n",
-    "    for key, value in options.items():\n",
-    "        if key in default_options.keys() and key != 'text-genes':\n",
-    "            default_options.update({key: value})\n",
+    "    # Override defaults with options\n",
+    "    all_options.update(options)\n",
+    "    all_options['text-genes'] = '\\n'.join(input_genes)\n",
     "\n",
-    "    # Get payload\n",
-    "    boundary = \"----WebKitFormBoundary7MA4YWxkTrZu0gW\"\n",
-    "    payload = ''.join(\n",
-    "        ['--' + boundary + '\\r\\nContent-Disposition: form-data; name=\\\"{key}\\\"\\r\\n\\r\\n{value}\\r\\n'.format(**locals())\n",
-    "         for key, value in default_options.items()]) + '--' + boundary + '--'\n",
-    "\n",
-    "    # Get Headers\n",
-    "    headers = {\n",
-    "        'content-type': \"multipart/form-data; boundary=\" + boundary,\n",
-    "        'cache-control': \"no-cache\",\n",
-    "    }\n",
-    "\n",
-    "    # Initialize connection\n",
-    "    conn.request(\"POST\", \"/X2K/api\", payload, headers)\n",
-    "\n",
-    "    # Get response\n",
-    "    res = conn.getresponse()\n",
+    "    # Perform request & get response\n",
+    "    res = requests.post(\n",
+    "        'https://maayanlab.cloud/X2K/api',\n",
+    "        files=[(k, (None, v)) for k, v in default_options.items()],\n",
+    "    )\n",
     "\n",
     "    # Read response\n",
-    "    data = res.read().decode('utf-8')\n",
+    "    data = res.json()\n",
     "\n",
     "    # Convert to dictionary\n",
-    "    x2k_results = {key: json.loads(value) if key != 'input' else value for key, value in json.loads(data).items()}\n",
+    "    x2k_results = {key: json.loads(value) if key != 'input' else value for key, value in data.items()}\n",
     "\n",
     "    # Clean results\n",
     "    x2k_results['ChEA'] = x2k_results['ChEA']['tfs']\n",
@@ -1071,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
